added github icon

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                 ><i class="fa-brands fa-linkedin fa-xl"></i
               ></a>
               <a href=""><i class="fa-brands fa-twitter fa-xl"></i></a>
-              <a href=""><i class="fa-brands fa-facebook fa-xl"></i></a>
+              <a href="https://github.com/joshikhush"><i class="fa-brands fa-github fa-xl"></i></a>
             </div>
           </div>
           <!-- <div class="Contact-right">
