--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
           <img src="portfolio.jpg" alt="" />
         </div>
         <div class="about-col-2">
-          <h1 class="subtitle">About Me</h1>
-
+          <h1>About Me</h1>
           <div class="para1">
             <p>
               Hello there! I'm Khushboo Joshi,a passionate and driven individual
@@ -87,11 +86,6 @@
               enthusiasm and dedication are boundless. I may not have a lengthy
               list of professional experience to showcase, but what I lack in
               years, I make up for in determination and a thirst for knowledge.
-            </p>
-          </div>
-
-          <div class="para3">
-            <p>
               I believe that every challenge is an opportunity to learn and
               grow, and I'm excited to embrace each new coding puzzle with an
               open mind and a can-do attitude. My love for technology, coupled
@@ -99,9 +93,10 @@
               websites, fuels my desire to continuously improve and expand my
               skill set.
             </p>
+            <a href="#" class="button">More About</a>
           </div>
 
-          <div class="para2">
+          <!-- <div class="para2">
             <p>
               Join me on this exciting journey of discovery and growth as I
               embark on my career in web development. Together, we can turn
@@ -110,119 +105,123 @@
               connecting with you to explore the endless possibilities of the
               digital world.
             </p>
-          </div>
+          </div> -->
         </div>
       </div>
     </div>
 
     <!-- skills -->
+    <div class="skillf"><h3>Skills & Tools</h3></div>
+    <div class="skillp">Recently,I have been actively engage in following Technologies</div>
     <section id="skills">
-      <h2 class="skillf">Skills</h2>
-      <div class="skill">
-        <h3>Web Development</h3>
-        <p>HTML, CSS, JavaScript</p>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-          <path
-            fill="#00cba9"
-            fill-opacity="1"
-            d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-          ></path>
-        </svg>
-      </div>
-      <div class="skill">
-        <h3>Web/Graphic Design</h3>
-        <p>Adobe Photoshop, Canva</p>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-          <path
-            fill="#00cba9"
-            fill-opacity="1"
-            d="M0,288L48,282.7C96,277,192,267,288,240C384,213,480,171,576,144C672,117,768,107,864,106.7C960,107,1056,117,1152,154.7C1248,192,1344,256,1392,288L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-          ></path>
-        </svg>
-      </div>
-      <div class="skill">
-        <h3>Programming Languages</h3>
-        <p>C++ , Python</p>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-          <path
-            fill="#00cba9"
-            fill-opacity="1"
-            d="M0,224L120,197.3C240,171,480,117,720,117.3C960,117,1200,171,1320,197.3L1440,224L1440,320L1320,320C1200,320,960,320,720,320C480,320,240,320,120,320L0,320Z"
-          ></path>
-        </svg>
-      </div>
+      <div class="card">
+        <img src="html5-logo-31813.png" alt="Skill Image">
+        <div class="card-content">
+            <h2>HTML-5</h2>
+        </div>
+    </div>
 
-      <div class="skill">
-        <h3>Version Controls</h3>
-        <p>Git , Github</p>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-          <path
-            fill="#00cba9"
-            fill-opacity="1"
-            d="M0,288L48,272C96,256,192,224,288,197.3C384,171,480,149,576,165.3C672,181,768,235,864,250.7C960,267,1056,245,1152,250.7C1248,256,1344,288,1392,304L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-          ></path>
-        </svg>
+    <div class="card">
+      <img src="html5-logo-31821.png" alt="Skill Image">
+      <div class="card-content">
+          <h2>CSS-3</h2>
       </div>
+  </div>
 
-      <div class="skill">
-        <h3>Video Editing</h3>
-        <p>VN</p>
-        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320">
-          <path
-            fill="#00cba9"
-            fill-opacity="1"
-            d="M0,288L48,282.7C96,277,192,267,288,240C384,213,480,171,576,144C672,117,768,107,864,106.7C960,107,1056,117,1152,154.7C1248,192,1344,256,1392,288L1440,320L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"
-          ></path>
-        </svg>
-      </div>
+  <div class="card">
+    <img src="javascript-39404.png" alt="Skill Image">
+    <div class="card-content">
+        <h2>JavaScript</h2>
+    </div>
+  </div>
+
+  <div class="card">
+    <img src="pngwing.com (1).png" alt="Skill Image">
+    <div class="card-content">
+        <h2>Express.js</h2>
+    </div>
+</div>
+
+<div class="card">
+  <img src="pngwing.com.png" alt="Skill Image">
+  <div class="card-content">
+      <h2>Node.js</h2>
+  </div>
+</div>
+
+<div class="card">
+  <img src="pngwing.com (2).png" alt="Skill Image">
+  <div class="card-content">
+      <h2>MongoDb</h2>
+  </div>
+</div>
+
+
+<div class="card">
+  <img src="pngwing.com (3).png" alt="Skill Image">
+  <div class="card-content">
+      <h2>React.js</h2>
+  </div>
+</div>
+
+<div class="card">
+  <img src="pngwing.com (4).png" alt="Skill Image">
+  <div class="card-content">
+      <h2>Github</h2>
+  </div>
+</div>
+
+<div class="card">
+  <img src="pngwing.com (5).png" alt="Skill Image">
+  <div class="card-content">
+      <h2>Git</h2>
+  </div>
+</div>
+
+<div class="card">
+  <img src="pngwing.com (6).png" alt="Skill Image">
+  <div class="card-content">
+      <h2>Tailwind Css</h2>
+  </div>
+</div>
+
+<div class="card">
+  <img src="pngwing.com (7).png" alt="Skill Image">
+  <div class="card-content">
+      <h2>C++</h2>
+  </div>
+</div>
     </section>
 
-    <!-- projects -->
-    <section id="project-section">
-      <h2 class="skillf">Projects</h2>
-      <div class="card-container">
-        <div class="card">
-          <div class="card-content">
-            <img src="pizza.png" alt="Project Title" />
-            <h3>Pizza Ordering Website Project</h3>
-            <p>
-              An Online Pizza ordering website project created with the help of
-              HTML and CSS. With a user-friendly interface and quick checkout
-              process, I've tried to made ordering your favorite pie easier than
-              ever.
-            </p>
-            <a href="/project2">Learn More</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-content">
-            <img src="SPOTIFY - music website project.png" alt="" />
-            <h3>Spotify-music Website project</h3>
-            <p>
-              A musical website created with the help of CSS and HTML. Discover,
-              play, and groove to your favorite tunes with elegant design and
-              intuitive controls.
-            </p>
-            <a href="/spotify">Learn More</a>
-          </div>
-        </div>
-
-        <div class="card">
-          <div class="card-content">
-            <img src="Your paragraph text.png" alt="Project Title" />
-            <h3>Amazon Clone Website project</h3>
-            <p>
-              A clonning project of Amazon meticulously crafted with HTML and
-              CSS. Experience the familiarity of Amazon's user interface as you
-              explore a range of products, effortless navigation, and secure
-              checkout.
-            </p>
-            <a href="/project 3">Learn More</a>
-          </div>
-        </div>
+<!-- project section -->
+<div class="skillf"><h3>Latest Projects</h3></div>
+<section id="projects">
+  <div class="portfolio">
+    <div class="projectrow">
+      <img src="pizza.png" alt="">
+      <div class="layer">
+        <h5>Pizza Ordering Website</h5>
+        <p>Crafting a seamless and user-friendly pizza ordering website, where pizza enthusiasts can effortlessly customize their perfect pie, explore a diverse menu, and enjoy a hassle-free online ordering experience.</p>
       </div>
-    </section>
+    </div>
+
+    <div class="projectrow">
+      <img src="SPOTIFY - music website project.png" alt="">
+      <div class="layer">
+        <h5>Spotify Lite- music website</h5>
+        <p>Embark on a sonic journey with our innovative music listening website, offering a curated collection of tunes across genres, personalized playlists, and an immersive audio experience, designed to cater to every musical palate.</p>
+      </div>
+    </div>
+
+    <div class="projectrow">
+      <img src="Your paragraph text.png" alt="">
+      <div class="layer">
+        <h5>Pizza Ordering Website</h5>
+        <p>Introducing an ambitious Amazon clone website project that mirrors the unparalleled e-commerce giant, offering a seamless shopping experience, robust product catalog, and efficient logistics to empower businesses aspiring to emulate the success of the world's leading online marketplace.</p>
+      </div>
+    </div>
+  </div>
+</section>
 
     <!-- Hire me -->
     <div id="contact-me">
