fixed project section

--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@
 
 <!-- project section -->
 <div class="skillf"><h3>Latest Projects</h3></div>
+<div class="skillp">
+  <p>Dive into a showcase of our innovative projects, where creativity meets functionality.</p></div>
 <section id="projects">
   <div class="portfolio">
     <div class="projectrow">
@@ -202,6 +204,7 @@
       <div class="layer">
         <h5>Pizza Ordering Website</h5>
         <p>Crafting a seamless and user-friendly pizza ordering website, where pizza enthusiasts can effortlessly customize their perfect pie, explore a diverse menu, and enjoy a hassle-free online ordering experience.</p>
+        <a href="https://github.com/joshikhush/project2"><i class="bx bx-link-external"></i></a>
       </div>
     </div>
 
@@ -210,6 +213,7 @@
       <div class="layer">
         <h5>Spotify Lite- music website</h5>
         <p>Embark on a sonic journey with our innovative music listening website, offering a curated collection of tunes across genres, personalized playlists, and an immersive audio experience, designed to cater to every musical palate.</p>
+        <a href="https://github.com/joshikhush/spotify"><i class="bx bx-link-external"></i></a>
       </div>
     </div>
 
@@ -218,6 +222,16 @@
       <div class="layer">
         <h5>Pizza Ordering Website</h5>
         <p>Introducing an ambitious Amazon clone website project that mirrors the unparalleled e-commerce giant, offering a seamless shopping experience, robust product catalog, and efficient logistics to empower businesses aspiring to emulate the success of the world's leading online marketplace.</p>
+        <a href="https://github.com/joshikhush/project-3"><i class="bx bx-link-external"></i></a>
+      </div>
+    </div>
+
+    <div class="projectrow">
+      <img src="Red Blue Modern Breaking News Youtube Thumbnail.png" alt="">
+      <div class="layer">
+        <h5>NewsInsta-Api project</h5>
+        <p>Crafting a seamless and user-friendly pizza ordering website, where pizza enthusiasts can effortlessly customize their perfect pie, explore a diverse menu, and enjoy a hassle-free online ordering experience.</p>
+        <a href="https://github.com/joshikhush/Newsapp"><i class="bx bx-link-external"></i></a>
       </div>
     </div>
   </div>
